--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -1,8 +1,10 @@
 @import"~bootstrap/scss/bootstrap.scss";
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 
+
+
 .container-fluid{
   padding: 0 !important;
   margin: 0 !important;
-  overflow-x: hidden;
+  overflow: hidden;
 }
