--- a/src/assets/style/mixin.scss
+++ b/src/assets/style/mixin.scss
@@ -10,3 +10,11 @@
 
   }
 }
+
+@mixin left ($type:'justify'){
+  display: flex;
+  @if $type == 'justify'{
+    justify-content: flex-start;
+    flex-direction: column;
+  }
+}
