--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -26,7 +26,7 @@ img {
   }
 }
 
-.btnSecond {
+.btnSecond, .btnFaceBody {
   color: $swirl;
   border: 3px solid $swirl;
   &:hover {
@@ -35,13 +35,21 @@ img {
   }
 }
 
+.btnFaceBody {
+  @include left ('justify');
+}
+
 //soon under the header
+.jumbotron {
+  width: 100%;
+}
+
 .heroArea {
   color: $whiteColor;
   position: absolute;
-  bottom: 60%;
   left: 50%;
-  transform: translate(-50%, -60%);
+  top: 15%;
+  transform: translate(-50%,-15% );
   h2 {
     font-size: 48px;
   }
@@ -51,15 +59,14 @@ h2, h4, p {
   text-transform: capitalize;
 }
  
-/* LUXURY COMPOINENT */
-.middleMain,
-#ellipse {
+/* LUXURY COMPOINENT of Main*/
+.Luxury {
+  @include center ('both');
+  flex-direction: column;
   background-color: $whiteColor;
 }
 
 .LuxuryText {
-  @include center ('both');
-  flex-direction: column;
   width: 30%;
   color: $ironsideGrey;
   margin: 0 auto;
@@ -76,20 +83,28 @@ h2, h4, p {
   padding: 16px 0;
 }
 
+.line {
+  width: 6vw;
+  border-bottom: 1px solid $malta;
+  margin: 50px auto;
+}
+
 .leaf, .topText, .middleIcons {
   color: $malta;
 }
 
-.line {
-  width: 6vw;
-  border-bottom: 1px solid $malta;
-  margin: 50px;
+/* IconAndTextLuxury component of Main*/
+.iconBg {
+  @include center ('justify');
+  width: 100%;
+  height: 220px;
+  clip-path: ellipse(51% 48%);
+  background-color: $whiteColor;
+  padding: 32px;
 }
 
-//icon plus text under it (hands, smile, heart etc..)
 .iconText {
   width: 60%;
-  margin: 60px auto;
 }
 
 .middleIcons  {
@@ -109,8 +124,66 @@ h2, h4, p {
   font-size: 36px;
 }
 
-#ellipse {
-  height: 105px;
-  clip-path: ellipse(50% 50%);
-  margin-top: 175px;
+/* faceAndBody component of Main */
+.faceBodyTreatments {
+  background-color: $swirlBg;
+  margin-top: -100px;
+  padding-top: 240px;
+}
+
+.picAndText {
+  @include center ('both');
+  width: 60%;
+  margin: 0 auto;
+}
+
+.imageBath {
+  float: left;
+  clear: both;
+  border: 20px solid $whiteColor;
+  box-shadow: 2px 3px 7px -4px $doveGrey;
+  margin-right: 48px;
+}
+
+.faceBodyRight {
+  text-align: left;
+  width: 30%;
+  color: $doveGrey;
+  p {
+    font-size: 11px;
+  }
+}
+
+.infoBox {
+  @include center ('align');
+  text-align: left;
+  color: $malta;
+  border: 1px solid $malta;
+  background-color: $whiteColor;
+  padding-left: 12px;
+  p, i {
+    color: $doveGrey;
+  }
+  p, h6 {
+    text-transform: capitalize;
+    padding-left: 12px;
+  }
+}
+
+.active{
+  color:  $malta;
+}
+
+.bG {
+  position: relative;
+  height: 250px;
+  padding-top: 100px;
+  h4 {
+    position: absolute;
+    left: 50%;
+    top: 75%;
+    transform: translate(-50%, -75%);
+    color: $whiteColor;
+    text-transform: uppercase;
+  }
 }
