--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -1,7 +1,13 @@
 @import"~bootstrap/scss/bootstrap.scss";
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import "~@fontsource/playfair-display/400.css";
+@import "~@fontsource/cormorant-garamond/400-italic.css";
+@import "~@fontsource/nunito-sans/400.css";
 
 
+body {
+  font-family: "Nunito Sans";
+}
 
 .container-fluid{
   padding: 0 !important;
