--- a/src/assets/style/treatsCard.scss
+++ b/src/assets/style/treatsCard.scss
@@ -18,6 +18,7 @@ img {
 }
 
 h5 {
+  font-family: "Playfair Display";
   color: $malta;
   text-transform: capitalize;
   border-bottom: 1px solid $malta;
