--- a/src/assets/style/faceBodyTreatments.scss
+++ b/src/assets/style/faceBodyTreatments.scss
@@ -1,5 +1,5 @@
 .faceBodyTreatments {
-  background-color: $swirlBg;
+  background-color: $swirl;
   margin-top: -100px;
   padding-top: 240px;
   padding-bottom: 100px;
