--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -12,30 +12,40 @@ img {
 .LuxuryText h2,
 .middleIcons p,
 .faceBodyRight h2,
-.bG h4,
-.text h5 {
+.bGfirst h4 {
   font-family: "Playfair Display";
 }
 
 .heroArea h4,
 .topText,
-.infoBox h6 {
+.infoBox h6,
+.offerText h4 {
   font-family: "Cormorant Garamond";
-
 }
 
+//text in main, uppercase and capitalize
+.btn,
+.bGfirst h4,
+.citation h6,
+.discount p {
+  text-transform: uppercase;
+}
+
+h2, p {
+  text-transform: capitalize;
+}
 
 //all buttons in main
 .btn {
   font-weight: 600;
-  font-size: 14px;
-  text-transform: uppercase;
+  font-size: 12px;
   border-radius: 25px;
   padding: 7px 24px;
   margin: 38px;
 }
 
-.btnFirst {
+.btnFirst,
+.butn {
   color: $whiteColor;
   background-color: $swirl;
   &:hover {
@@ -54,28 +64,29 @@ img {
 }
 
 .btnFaceBody {
-  @include left ('justify');
+  margin: 24px 0 !important;
+  width: max-content;
 }
 
-//soon under the header
+//soon under the header, jumbotron
 .jumbotron {
   @include center ('both');
   width: 100%;
 }
 
 .heroArea {
+  width: 80%;
   color: $whiteColor;
   position: absolute;
   left: 50%;
-  top: 7%;
-  transform: translate(-50%, -50% );
+  top: 3%;
+  transform: translate(-50%, 50%);
   h2 {
-    font-size: 48px;
+    font-size: 10vh;
   }
-}
-
-h2, p {
-  text-transform: capitalize;
+  h4 {
+    font-size: 5vh;
+  }
 }
  
 /* LUXURY COMPOINENT of Main*/
@@ -143,24 +154,78 @@ h2, p {
   font-size: 36px;
 }
 
-/* Our Treatments */
+// Our Treatments (also a common class with the offer side)
 .bG {
   position: relative;
-  height: 150px;
   img {
     height: 100%;
     object-fit: cover;
   }
 }
+
+.bGfirst {
+  height: 150px;
+}
  
-.bG h4 {
+.bGfirst h4,
+.bGsecond .offer{
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   color: $whiteColor;
-  text-transform: uppercase;
 }
 
+// citation part, with image and citation, before footer 
+.parfumImg {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 
+.citation {
+  width: 40%;
+  color: $whiteColor;
+  font-weight: 600;
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, 50%);
+  p {
+    text-transform: none;
+  }
+  h6 {
+    font-weight: 600;
+  }
+}
 
+// offer side with the 25% off
+.bGsecond {
+  height: 250px;
+  text-align: left;
+  p {
+    font-size: 12px;
+  }
+}
+
+.offer {
+  width: 80%;
+  @include center ('both');
+}
+
+.discount {
+  @include center ('both');
+  flex-direction: column;
+  width: 120px;
+  height: 100px;
+  padding: 8px;
+  margin-right: 32px;
+  border: 1px solid $swirl;
+  h4 {
+    font-size: 40px;
+  } 
+}
+
+.offerText {
+  margin-right: 120px;
+}
