--- a/src/assets/style/footer.scss
+++ b/src/assets/style/footer.scss
@@ -1,4 +1,6 @@
 footer {
+  position: relative;
+  height: 100px;
   padding: 32px
 }
 
@@ -7,7 +9,7 @@ footer {
   width: 70%;
   color: $doveGrey;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 10px;
 }
 
 .footerIcons i{
@@ -19,5 +21,18 @@ footer {
   background-color: $swirlBg;
   border-radius: 5px;
   padding: 8px;
-  margin: 0 24px ;
+  margin: 0 12px ;
 }  
+
+.goUp {
+  @include center ('both');
+  width: 40px;
+  height: 25px;
+  background-color: $doveGrey;
+  position: absolute;
+  right: 4%;
+  bottom: 0;
+  .chevron {
+    color: $whiteColor;
+  }
+}
